Ceph: Make sure stale dentries should be unhashed successfully in time.

Prior to kernel v3.19, d_invalidate() might not unhash stale dentries due to reference count,
so the stale dentries are left in the memory, causing a delayed expiration.

Fixes: http://tracker.ceph.com/issues/23097

Signed-off-by: Yupeng Chen <chenyupeng-it@360.cn>